// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > AiCategoryIcon > renders AiCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      AiCategoryIcon
    </title>
    <g
      class="AI"
    >
      <path
        class="fillStrong"
        d="M17.784 11.897c.021-.066.034-.136.05-.204a2.82 2.82 0 0 0-.958-2.862 3.04 3.04 0 0 0-.44-3.427 2.73 2.73 0 0 0-1.74-.926 4.03 4.03 0 0 0-2.512-2.275 2.74 2.74 0 0 0-2.094.013 2.35 2.35 0 0 0-.992 2.401l.002.103-.01 9.861c0 .01.005.017.005.026a3.184 3.184 0 0 0 2.663 3.367q.217.024.435.024a2.97 2.97 0 0 0 2.742-1.619 2.55 2.55 0 0 0 1.496-1.501c.183-.459.223-.962.113-1.444a2.73 2.73 0 0 0 1.24-1.537m-3.052 2.328a.69.69 0 0 1-.583.48.94.94 0 0 0-.762.668 1.203 1.203 0 0 1-1.44.792c-.514-.054-1.033-.613-1.033-1.578l-.004-.017.003-2.594a1.26 1.26 0 0 1 .177-.716.835.835 0 0 1 .819-.485.911.911 0 0 0-.092-1.818c-.307.01-.61.068-.9.17l.004-4.423-.003-.126q-.024-.376.019-.752c.23-.024.462.01.674.102a1.95 1.95 0 0 1 1.195.927c-.49.346-.87.828-1.092 1.385a.91.91 0 0 0 1.675.713q.288-.675.724-.694a1.09 1.09 0 0 1 .925.311 1.276 1.276 0 0 1-.124 1.896.915.915 0 0 0 .327 1.468c.36.152.648.435.806.792q.039.173.046.35c-.007.151-.047.3-.118.435a1 1 0 0 1-.14.152 1.11 1.11 0 0 1-.944.281.91.91 0 0 0-.47 1.758q.153.028.31.039a.57.57 0 0 1 .001.483Z"
        fill="#A365F6"
      />
      <path
        class="fill"
        d="m10.922 14.581-.01-9.844.002-.117a2.35 2.35 0 0 0-.991-2.406A2.75 2.75 0 0 0 7.829 2.2a4.04 4.04 0 0 0-2.511 2.277 2.75 2.75 0 0 0-1.74.927 3.04 3.04 0 0 0-.44 3.426 2.88 2.88 0 0 0-.998 1.809 2.55 2.55 0 0 0 .786 2.418q.248.226.542.39a2.43 2.43 0 0 0 .114 1.43 2.55 2.55 0 0 0 1.496 1.502A2.97 2.97 0 0 0 7.82 18q.21 0 .435-.024a3.185 3.185 0 0 0 2.663-3.368c0-.01.005-.017.005-.026Zm-2.856 1.584c-1.095.105-1.378-.579-1.436-.779a.91.91 0 0 0-.766-.681.69.69 0 0 1-.584-.482.58.58 0 0 1-.017-.428q.156-.01.31-.039a.909.909 0 0 0 .227-1.675.9.9 0 0 0-.699-.083c-.21.037-.426.01-.62-.077a1 1 0 0 1-.11-.06l-.028-.02a.96.96 0 0 1-.407-.985c.005-.029.003-.047.01-.077v-.002a1.48 1.48 0 0 1 .819-.84.91.91 0 0 0 .335-1.472 1.277 1.277 0 0 1-.125-1.896 1.08 1.08 0 0 1 .925-.31q.436.02.724.693a.91.91 0 1 0 1.675-.712 3.1 3.1 0 0 0-1.092-1.386 2.05 2.05 0 0 1 1.27-.953 1.6 1.6 0 0 1 .574-.102c.052.257.066.52.043.781l-.002.14.007 6.592a2.2 2.2 0 0 0-.88-.199.91.91 0 1 0 0 1.82c.358 0 .88.645.88 1.653 0 .966-.52 1.525-1.033 1.579"
        fill="#4F0599"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BaremetalCategoryIcon > renders BaremetalCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BaremetalCategoryIcon
    </title>
    <g
      class="Baremetal"
    >
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M11.167 11.167H8.834v3.5H5.167a1 1 0 0 0-1 1V16a1 1 0 0 0 1 1h9.666a1 1 0 0 0 1-1v-.333a1 1 0 0 0-1-1h-3.666z"
        fill="#A365F6"
        fill-rule="evenodd"
      />
      <g
        fill="#4F0599"
      >
        <path
          class="fill"
          clip-rule="evenodd"
          d="M13 5H7a2 2 0 0 0-2 2v1.333a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M7 3a4 4 0 0 0-4 4v1.333a4 4 0 0 0 4 4h6a4 4 0 0 0 4-4V7a4 4 0 0 0-4-4z"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          d="M8.833 7.5a1 1 0 0 1 1-1H12.5a1 1 0 0 1 1 1v.333a1 1 0 0 1-1 1H9.833a1 1 0 0 1-1-1z"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > BillingCategoryIcon > renders BillingCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      BillingCategoryIcon
    </title>
    <g
      class="Billing"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M6.25 7A.75.75 0 0 1 7 6.25h5a.75.75 0 0 1 0 1.5H7A.75.75 0 0 1 6.25 7m0 3A.75.75 0 0 1 7 9.25h6a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M7 12.25a.75.75 0 0 0 0 1.5h2.5a.75.75 0 0 0 0-1.5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V5.732L12.812 2zm0 2h7.05L15 6.629V16H5zm7.5 10.25a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ComputeCategoryIcon > renders ComputeCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ComputeCategoryIcon
    </title>
    <g
      class="Compute"
    >
      <path
        class="fillStrong"
        d="M11 16a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm-4 0a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zm8-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 12a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1m13-4a1 1 0 0 1 1-1h1a1 1 0 1 1 0 2h-1a1 1 0 0 1-1-1M2 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1m9-5a1 1 0 1 1 2 0v1a1 1 0 1 1-2 0zM7 3a1 1 0 0 1 2 0v1a1 1 0 0 1-2 0z"
        fill="#A365F6"
      />
      <path
        class="fill"
        clip-rule="evenodd"
        d="M14 6H6v8h8zM6 4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        d="M8 9a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H9a1 1 0 0 1-1-1z"
        fill="#A365F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > ContainersCategoryIcon > renders ContainersCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      ContainersCategoryIcon
    </title>
    <g
      class="Containers"
    >
      <path
        class="fill"
        clip-rule="evenodd"
        d="M3 5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2zm12 0H5v10h10z"
        fill="#4F0599"
        fill-rule="evenodd"
      />
      <path
        class="fillStrong"
        clip-rule="evenodd"
        d="M8 7a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V8a1 1 0 0 1 1-1"
        fill="#A365F6"
        fill-rule="evenodd"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DataAndAnalyticsCategoryIcon > renders DataAndAnalyticsCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DataAndAnalyticsCategoryIcon
    </title>
    <g
      class="Managed-Services"
    >
      <g
        class="Group 42"
      >
        <path
          class="fill"
          d="M12 5.5 14.5 3 17 5.5 14.5 8zm0 9 2.5-2.5 2.5 2.5-2.5 2.5zm-9 0L5.5 12 8 14.5 5.5 17zm0-9L5.5 3 8 5.5 5.5 8z"
          fill="#4F0599"
        />
        <path
          class="fillStrong"
          d="m7 10 3-3 3 3-3 3z"
          fill="#A365F6"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatabaseCategoryIcon > renders DatabaseCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatabaseCategoryIcon
    </title>
    <g
      class="Database"
    >
      <g
        class="DB"
      >
        <path
          class="fillStrong"
          d="M10.024 12.797c-2.89 0-6-.841-6-2.69h1.444c.084.32 1.612 1.187 4.556 1.187s4.473-.867 4.557-1.196l1.443.01c0 1.848-3.11 2.69-6 2.69Z"
          fill="#A365F6"
        />
        <path
          class="fill"
          d="m16.497 5.532.003-.028C16.5 3.44 13.13 2.5 10 2.5s-6.5.94-6.5 3.004c0 .02.005.037.006.057v8.952h.003c.018 2.052 3.373 2.987 6.493 2.987 3.114 0 6.461-.932 6.49-2.977h.005zM10 4.5c2.576 0 4.085.65 4.444 1.004-.359.353-1.868 1.003-4.444 1.003s-4.085-.65-4.444-1.003C5.915 5.15 7.425 4.5 10 4.5m.002 11c-2.797 0-4.335-.768-4.489-1.003h-.002V7.75c1.242.512 2.895.757 4.489.757 1.595 0 3.25-.246 4.492-.758v6.679c-.207.328-1.734 1.072-4.49 1.072"
          fill="#4F0599"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DatacenterCategoryIcon > renders DatacenterCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DatacenterCategoryIcon
    </title>
    <g
      class="Datacenter"
    >
      <g
        class="Datacenters-icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M15 9V7H5v2zm0 4v-2H5v2z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M5 3h10a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1m9 12V5H6v10z"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > DocumentationCategoryIcon > renders DocumentationCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      DocumentationCategoryIcon
    </title>
    <g
      class="Documentation"
    >
      <g
        class="Icon"
      >
        <path
          class="fillStrong"
          clip-rule="evenodd"
          d="M10 7.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-1 1a1 1 0 0 0 0 2v3a1 1 0 1 0 2 0v-5z"
          fill="#A365F6"
          fill-rule="evenodd"
        />
        <path
          class="fill"
          clip-rule="evenodd"
          d="M10 4.5a5.5 5.5 0 0 0-4.582 8.544 1 1 0 0 1 .146.764L5.29 15.08l1.27-.363a1 1 0 0 1 .763.088A5.5 5.5 0 1 0 10 4.5M2.5 10a7.5 7.5 0 1 1 4.228 6.75l-2.489.712a1 1 0 0 1-1.253-1.171l.538-2.507A7.47 7.47 0 0 1 2.5 10"
          fill="#4F0599"
          fill-rule="evenodd"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon correctly 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with custom aria-label 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with custom className 1`] = `
<DocumentFragment>
  <svg
    class="custom-class style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with custom data-testid 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with custom style 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    style="color: red; cursor: pointer;"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with disabled state 1`] = `
<DocumentFragment>
  <svg
    class="style_primaryDisabled__1m2xqlz3"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`categoryIcons > PartnersCategoryIcon > renders PartnersCategoryIcon with hidden aria 1`] = `
<DocumentFragment>
  <svg
    class="style_primary__1m2xqlz2"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <title>
      PartnersCategoryIcon
    </title>
    <g
      class="Partners"
      clip-rule="evenodd"
      fill-rule="evenodd"
    >
      <path
        class="fill"
        d="M3 4a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1a1 1 0 1 1 0-2V5H5v6a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1z"
        fill="#521094"
      />
      <path
        class="fillStrong"
        d="M7 8a1 1 0 0 1 1-1h1a1 1 0 0 1 0 2v6h6V9a1 1 0 1 1 0-2h1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1z"
        fill="#A060F6"
      />
    </g>
  </svg>
</DocumentFragment>
`;
